using modules according to https://guides.gradle.org/building-java-9-modules/