@@ -1,4 +1,9 @@
-group 'com.xiumeteo.java9.migration'
+
+plugins {
+    id 'org.springframework.boot' version '1.5.6.RELEASE'
+}
+
+group 'com.xiumeteo'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
@@ -15,36 +20,51 @@ repositories {
     }
 }
 
-buildscript {
-    repositories {
-        mavenCentral()
-        mavenLocal()
-        maven {
-            url 'https://repo.spring.io/libs-milestone'
-        }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
-    }
-}
-
 dependencies {
-    compile 'org.springframework:spring-webmvc:5.0.0.RC3'
-    compile 'org.springframework:spring-core:5.0.0.RC3'
-    compile 'org.springframework:spring-context:5.0.0.RC3'
-    compile 'org.springframework:spring-beans:5.0.0.RC3'
-    compile 'org.springframework:spring-aop:5.0.0.RC3'
-    compile 'org.springframework:spring-expression:5.0.0.RC3'
-    compile 'org.springframework:spring-web:5.0.0.RC3'
-    compile("org.springframework.boot:spring-boot-starter-web:2.0.0.M3") {
-        exclude module: "spring-boot-starter-tomcat"
+    compile("org.springframework.boot:spring-boot-starter-web"){
+        exclude module : 'spring-boot-starter-logging'
     }
-    compile("org.springframework.boot:spring-boot-starter-jetty:2.0.0.M3")
-    compile("org.springframework.boot:spring-boot-starter-actuator:2.0.0.M3")
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'javax.servlet:jstl:1.2'
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '4.1'
+}
+
+ext.moduleName = 'com.xiumeteo'
+
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'junit',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+        ]
+        classpath = files()
+    }
+}
+
+test {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-MODULE-PATH',
+                '--add-reads', "$moduleName=junit",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+        ]
+        classpath = files()
+    }
 }
